Fix Bug 439786 - Folder default identity not applied if identity UOID > 0x7fffffff

FIXED-IN: 5.18.0
BUG: 439786